--- a/index.html
+++ b/index.html
@@ -1,144 +1,101 @@
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Pra Você, Maria</title>
+  <meta charset="UTF-8" />
+  <title>Mensagem Especial</title>
   <style>
     body {
-      background: linear-gradient(to right, #ffd6e0, #ffe6f0);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #cc0052;
-      text-align: center;
-      padding: 30px;
-      overflow-x: hidden;
+      background: #fff0f6;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+      overflow: hidden;
+      font-family: 'Arial', sans-serif;
     }
 
-    h1 {
-      font-size: 2.8em;
-      margin-bottom: 10px;
-      animation: pulse 2s infinite;
-    }
-
-    p {
-      font-size: 1.4em;
-      margin: 20px auto;
-      max-width: 500px;
-    }
-
-    .heart {
-      color: red;
-      font-size: 2em;
-      animation: float 3s ease-in-out infinite;
-    }
-
-    .box {
-      background: white;
-      padding: 20px;
+    #texto {
+      font-size: 1.5rem;
+      color: #ff4d6d;
       margin-top: 30px;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      display: none;
+      transition: all 0.5s ease-in-out;
+      text-align: center;
+      max-width: 80%;
+      line-height: 1.6;
     }
 
-    .signature {
-      margin-top: 40px;
-      font-style: italic;
-      font-size: 1.1em;
-      color: #99004d;
-    }
-
-    button {
-      background-color: #ff6699;
+    #botao {
+      padding: 15px 30px;
+      background-color: #ff4d6d;
       color: white;
-      padding: 12px 20px;
-      font-size: 1em;
+      font-size: 1.2rem;
       border: none;
       border-radius: 10px;
       cursor: pointer;
-      margin-top: 30px;
-      transition: background-color 0.3s;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     }
 
-    button:hover {
-      background-color: #e65c87;
+    .heart {
+      position: fixed;
+      top: -50px;
+      color: #ff4d6d;
+      font-size: 24px;
+      animation: fall linear forwards;
+      z-index: -1;
     }
 
-    #mensagemExtra {
-      margin-top: 25px;
-      display: none;
-      font-size: 1.3em;
-      color: #b3005c;
-      animation: fadeIn 2s ease forwards;
-    }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-    }
-
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .fragment {
-      position: absolute;
-      font-size: 20px;
-      color: red;
-      animation: explode 1s ease-out forwards;
-    }
-
-    @keyframes explode {
-      to {
-        transform: translate(var(--x), var(--y)) rotate(720deg);
+    @keyframes fall {
+      0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(100vh) rotate(360deg);
         opacity: 0;
       }
     }
   </style>
 </head>
 <body>
-  <h1>Oi Maria!</h1>
-  <p class="heart" id="explodingHeart">&hearts;</p>
-
-  <div class="box">
-    <p>Essa página é só pra te lembrar o quanto você é especial.</p>
-    <p>Eu adoro estar com você, ouvir sua voz, dar risada do nada, e até só ficar em silêncio do seu lado.</p>
-    <p>Você tem um jeitinho único que me deixa leve, me faz sorrir e querer estar por perto sempre.</p>
-    <p>Não importa o que o futuro traga, só de viver o agora com você já vale muito.</p>
-    <p>Obrigado por ser essa pessoa incrível que você é.</p>
-  </div>
-
-  <button onclick="explodirCoracao()">Clique aqui</button>
-  <p id="mensagemExtra">Você é a melhor parte dos meus dias. Te adoro demais!</p>
-
-  <p class="signature">– Com carinho, Natan</p>
+  <button id="botao">Clique aqui 💖</button>
+  <div id="texto"></div>
 
   <script>
-    function explodirCoracao() {
-      const heart = document.getElementById("explodingHeart");
-      heart.style.display = "none";
-      const count = 20;
+    const botao = document.getElementById("botao");
+    const texto = document.getElementById("texto");
 
-      for (let i = 0; i < count; i++) {
-        const frag = document.createElement("div");
-        frag.className = "fragment";
-        frag.style.left = "50%";
-        frag.style.top = "200px";
-        frag.innerHTML = "&hearts;";
-        frag.style.setProperty('--x', (Math.random() * 400 - 200) + 'px');
-        frag.style.setProperty('--y', (Math.random() * 400 - 200) + 'px');
-        document.body.appendChild(frag);
+    botao.addEventListener("click", () => {
+      botao.style.display = "none";
+      texto.style.display = "block";
+      texto.textContent = "Você é muito especial! 💕";
 
-        setTimeout(() => frag.remove(), 1000);
-      }
+      // Corações caindo
+      setInterval(() => {
+        const heart = document.createElement("div");
+        heart.classList.add("heart");
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.animationDuration = (Math.random() * 2 + 3) + "s";
+        heart.innerText = "💖";
+        document.body.appendChild(heart);
 
-      document.getElementById("mensagemExtra").style.display = "block";
-    }
+        setTimeout(() => {
+          heart.remove();
+        }, 5000);
+      }, 300);
+
+      // Após 3 segundos mostrar o texto completo
+      setTimeout(() => {
+        texto.innerHTML = `
+          Essa página é só pra te lembrar o quanto você é especial.<br><br>
+          Eu adoro estar com você, ouvir sua voz, dar risada do nada, e até só ficar em silêncio do seu lado.<br><br>
+          Você tem um jeitinho único que me deixa leve, me faz sorrir e querer estar por perto sempre.<br><br>
+          Não importa o que o futuro traga, só de viver o agora com você já vale muito.<br><br>
+          <strong>Obrigado por ser essa pessoa incrível que você é. 💖</strong>
+        `;
+      }, 3000);
+    });
   </script>
 </body>
 </html>
